[package]
name = "data_analyse_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.7.0", features = ["v4"] }
